<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.learn.mobileaipoc.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SummarizeFragment"
        android:name="com.learn.mobileaipoc.SummarizeFragment"
        android:label="@string/menu_summarize"
        tools:layout="@layout/fragment_summarize" />
    <fragment
        android:id="@+id/RagFragment"
        android:name="com.learn.mobileaipoc.RagFragment"
        android:label="@string/menu_rag"
        tools:layout="@layout/fragment_rag" />
    <fragment
        android:id="@+id/DictationFragment"
        android:name="com.learn.mobileaipoc.DictationFragment"
        android:label="@string/menu_dictation"
        tools:layout="@layout/fragment_dictation" />
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.learn.mobileaipoc.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>