<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummarizeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/button_load_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_model"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="16dp"
            android:text="@string/status_idle"
            app:layout_constraintStart_toEndOf="@id/button_load_model"
            app:layout_constraintTop_toTopOf="@id/button_load_model"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:gravity="top|start"
            android:hint="@string/enter_text_to_summarize"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/button_load_model"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_summarize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/summarize"
            app:layout_constraintTop_toBottomOf="@id/edit_input"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toEndOf="@id/button_summarize"
            app:layout_constraintTop_toTopOf="@id/button_summarize" />

        <TextView
            android:id="@+id/text_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintTop_toBottomOf="@id/button_summarize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Summary will appear here..." />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text_output"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/edit_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


